장준녕 커밋

--- a/src/main/resources/templates/corp/talentPool/offer.html
+++ b/src/main/resources/templates/corp/talentPool/offer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>인재 관리</title>
+    <title>채용제의한 인재</title>
     <th:block th:replace="~{fragments/external_file :: cdn_block}"></th:block>
     <link rel="stylesheet" th:href="@{/corp/talentPool/talent_pool.css}" />
     <link rel="stylesheet" th:href="@{/corp/talentPool/interviewOffer.css}"/>
