--- a/src/main/resources/templates/fragments/talentPoolHeader.html
+++ b/src/main/resources/templates/fragments/talentPoolHeader.html
@@ -2,8 +2,8 @@
 <div class="header-tabs">
   <a th:href="@{/corp/talentPool/talent_pool}" 
      th:classappend="${activeTab == 'talent_pool'} ? ' active'" class="tab">전체 인재</a>
-  <a th:href="@{/corp/talentPool/offer}" 
-     th:classappend="${activeTab == 'offer'} ? ' active'" class="tab">채용제의한 인재</a>
+<!--   <a th:href="@{/corp/talentPool/offer}" 
+     th:classappend="${activeTab == 'offer'} ? ' active'" class="tab">채용제의한 인재</a> -->
   <a th:href="@{/corp/talentPool/scrap}" 
      th:classappend="${activeTab == 'scrap'} ? ' active'" class="tab">스크랩한 인재</a>
   <a th:href="@{/corp/talentPool/recently_viewed}" 
