--- a/src/main/resources/templates/fragments/interviewOffer.html
+++ b/src/main/resources/templates/fragments/interviewOffer.html
@@ -3,40 +3,42 @@
   <div class="modal-content">
     <div class="modal-header">
       <h3>면접 제안 메일 보내기</h3>
-      <button type="button" class="modal-close">x</button>
+      <button type="button" class="modal-close">Ⅹ</button>
     </div>
-
     <div class="modal-body">
-      <form method="post" action="#">
-        <input type="hidden" name="corpNo" th:value="${corpNo}" />
-        <input type="hidden" name="email" th:value="${email}" />
+     <form id="interviewOfferForm" method="post" action="@{/corp/talentPool/interviewOffer/send}">
+	    <input type="hidden" th:value="${corpNo}" id="corpNo">
+	    <input type="hidden" th:value="${email}" id="email">
+        <input type="hidden" name="resumeSeq" th:value="${resumeSeq}" />
 
         <div class="form-group">
           <label class="form-label">메일 제목</label>
-          <input type="text" class="form-input" name="mailTitle" placeholder="[회사명]의 포지션에 대해 안내드립니다." required />
-        </div>
+		<input type="text" class="form-input" name="messageTitle" value="면접 제안 안내드립니다." required />
 
+        </div>
         <div class="form-group">
           <label class="form-label">메일 내용</label>
-          <textarea class="form-input email-textarea" name="mailContent" rows="12" required>
-안녕하세요, [지원자 이름] 님.
+          <span th:text="${corpInfo != null ? corpInfo.corpName : 'DefaultCorpName'}"></span>
+          <textarea class="form-input email-textarea" name="messageContent" rows="12" required>
+          
+안녕하세요.
 
-저희 [회사명]은 귀하의 이력서를 검토하였고,
-[포지션명] 포지션에 적합한 인재라 판단하여 면접 제안을 드립니다.
+저희 [[${corpInfo.corpName}]] 인사담당 팀에서 귀하의 이력서를 검토하였고,
+적합한 인재라 판단하여 면접 제안을 드립니다.
 
 편하신 일정을 회신 주시면, 인터뷰 일정을 조율하여 연락드리겠습니다.
 
 감사합니다.
-[회사명] 드림
+[[${corpInfo.corpName}]] 드림
+
+홈페이지 : [[${corpInfo.corpUrl}]]
           </textarea>
         </div>
-
         <div class="contact-info">
-          <p>📞 1588-1234 (평일 09:00~18:00)</p>
-          <p>📧 support@company.com</p>
+          <p>📞 전화 문의 1588-1234 (평일 09:00~18:00)</p>
+          <p>📧 담당자 이메일 : [[${corpInfo.corpEmail}]]</p>
         </div>
-
-        <button type="submit" class="submit-btn">📧 메일 보내기</button>
+        <button type="submit" class="submit-btn">메일 보내기</button>
       </form>
     </div>
   </div>
