병합 충돌 해결

--- a/src/main/resources/templates/fragments/talentList.html
+++ b/src/main/resources/templates/fragments/talentList.html
@@ -51,6 +51,7 @@
                    <button class="action-btn resume-btn">이력서 확인</button></a>
                    <button class="action-btn interview-btn openInterviewModalBtn">
                    면접 제안</button>
+						th:data-resume-seq="${talent.resumeSeq}">면접 제안</button>
                </div>
             </div>
        	</div>
