--- a/src/main/resources/templates/fragments/interviewOffer.html
+++ b/src/main/resources/templates/fragments/interviewOffer.html
@@ -26,6 +26,9 @@
 저희 [[${corpInfo.corpName}]] 인사담당 팀에서 귀하의 이력서를 검토하였고,
 적합한 인재라 판단하여 면접 제안을 드립니다.
 
+편하신 일정을 회신 주시면, 인터뷰 일정을 조율하여 연락드리겠습니다.
+
+감사합니다.
 [[${corpInfo.corpName}]] 드림
 
 홈페이지 : [[${corpInfo.corpUrl}]]
