이호빈커밋

--- a/src/main/resources/templates/corp/corp_info_edit.html
+++ b/src/main/resources/templates/corp/corp_info_edit.html
@@ -106,7 +106,7 @@
 
             <div class="btn-group">
                 <button type="button" class="btn btn-secondary" onclick="history.back()">취소</button>
-                 <button type="button" class="btn btn-info" onclick="location.href='/corp/image-upload'">기업 이미지 수정</button>
+                 <button type="button" class="btn btn-info" onclick="location.href='/corp/image/upload'">기업 이미지 수정</button>
                 <button type="submit" class="btn btn-primary">수정완료</button>
             </div>
         </form>
