--- a/src/main/resources/templates/corp/applicant/applicant_resume.html
+++ b/src/main/resources/templates/corp/applicant/applicant_resume.html
@@ -18,7 +18,7 @@
 				<div class="section-title">기본정보</div>
 				<div class="basic-info">
 					<div class="profile-image">
-						<img th:if="${resume.image}" th:src="@{/images/profileImg/{img}(img=${resume.image})}" alt="프로필 사진">
+						<img th:if="${resume.image != null}" th:src="@{/images/profileImg/{img}(img=${resume.image})}" alt="프로필 사진">
 					</div>
 					<div class="info-details">
 						<div class="name" th:text="${resumeUser.name}"></div>
